Fix z-index bug in style.css (#1895)
Fix z-index bug where "copy code" button and header have the same index leading to "copy code" button appearing on top of the header.

--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding-inline: 25px;
-  z-index: 100;
+  z-index: 200;
   border-bottom: 1px solid var(--hover-fg);
 }
 
